# RLP_TMR2023

./: .gitignore  README.md  data_recollection.prof  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/RLP_TMR2023/: main.py
src/RLP_TMR2023/HardwareControllers/: MotorsController.py  ProbandoSingleton.py  Singleton.py
src/RLP_TMR2023/behaviour_tree/: root.py
src/RLP_TMR2023/common_types/: common_types.py
src/RLP_TMR2023/constants/: bt_values.py  color_filters.py  cv_values.py  hardware_pins.py  object_detection_values.py  servos_values.py  ultrasonic_values.py
src/RLP_TMR2023/example_tflite/: detect.py  utils.py
src/RLP_TMR2023/hardware_controllers/: PB2.py  Prueba_Buzzer.py  README.md  buzzer_and_ultrasonics.py  buzzer_controller.py  camera_controller.py  distance_sensors_controller.py  imu_controller.py  motors_controller.py  mp_prueba.py  oled_display_controller.py  servos_controller.py
src/RLP_TMR2023/image_processing/: area_of_can.py  blue_filter.py  calculate_centroid.py  hsv_filter.py  hsv_filter_JQ.py  image_cropped.py  image_filtering.py  red_filter.py  tf_object_detection.py  visualization.py
src/RLP_TMR2023/mpu9250 controller/: mpu_controller.py  mpu_controller_a.py
src/RLP_TMR2023/mpu_controller/: mpu_controller.py
src/RLP_TMR2023/mpu_tests/: mpu_6050.py  mpu_master.py  mpu_test.py
src/RLP_TMR2023/oled_screen/: oled_screen_stats.py  other_example.py
src/RLP_TMR2023/prueba_behaviour_trees/: can_distance.py  (+3 more)
tests/: test_hardware_controllers.py  test_main.py
(+20 files in other folders)
