[metadata]
name = RLP_TMR2023
description = an easy to use data analysis tool
author = Agustin Zavala
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    RLP_TMR2023
install_requires =
    requests>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
DataShip = py.typed

[flake8]
max-line-length = 80